file upload and download finished

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,32 +2,52 @@
 <html>
 <head>
     <title>Getting Started: Serving Web Content</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
-    <p>Get your greeting <a href="/greeting">here</a></p>
-    <form action="/demo/api/download/customers.xlsx">
-        <input type="submit" value="Export To Excel" />
-    </form>
-    <div th:if="${message}">
-        <h2 th:text="${message}"/>
-    </div>
 
-    <div>
-        <form method="POST" enctype="multipart/form-data" action="/">
-            <table>
-                <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
-                <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
-            </table>
-        </form>
-    </div>
 
-    <div>
-        <ul>
-            <li th:each="file : ${files}">
-                <a th:href="${file}" th:text="${file}" />
-            </li>
-        </ul>
+    <noscript>
+        <h2>Sorry! Your browser doesn't support Javascript</h2>
+    </noscript>
+    <div class="upload-container">
+        <div class="upload-header">
+            <h2>Spring Boot File Upload / Download Rest API Example</h2>
+        </div>
+        <div class="upload-content">
+            <p>Get your greeting <a href="/greeting">here</a></p>
+            <form action="/api/files/download/customers.xlsx">
+                <input type="submit" value="Export To Excel" />
+            </form>
+            <div th:if="${message}">
+                <h2 th:text="${message}"/>
+            </div>
+            <div class="single-upload">
+                <h3>Upload Single File</h3>
+                <form id="singleUploadForm" name="singleUploadForm">
+                    <input id="singleFileUploadInput" type="file" name="file" class="file-input" required />
+                    <button type="submit" class="primary submit-btn">Submit</button>
+                </form>
+                <div class="upload-response">
+                    <div id="singleFileUploadError"></div>
+                    <div id="singleFileUploadSuccess"></div>
+                </div>
+            </div>
+            <div class="multiple-upload">
+                <h3>Upload Multiple Files</h3>
+                <form id="multipleUploadForm" name="multipleUploadForm">
+                    <input id="multipleFileUploadInput" type="file" name="files" class="file-input" multiple required />
+                    <button type="submit" class="primary submit-btn">Submit</button>
+                </form>
+                <div class="upload-response">
+                    <div id="multipleFileUploadError"></div>
+                    <div id="multipleFileUploadSuccess"></div>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="/js/main.js" ></script>
 </body>
 </html>
